force-app/main/default/objects/ToDo_Item__c/ToDo_Item__c.object-meta.xml
<CustomObject>
    <label>ToDo Item</label>
    <nameField>
        <displayFormat>Do#{0000}</displayFormat>
        <label>ToDo Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ToDo Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>