force-app/main/default/objects/ToDo_Item__c/fields/is_Finished__c.field-meta.xml
<CustomField>
    <fullName>is_Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Finished</label>
    <type>Checkbox</type>
</CustomField>