force-app/main/default/objects/ToDo_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>is_Finished__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>